A bit of code clean up
Code clean up using suggestions from Tais993